# GBM-Path-Simulator-Distributional-Analyzer

./: .gitignore  CMakeLists.txt  README.md  main.cpp  main_bin
data/: convergence.csv  paths.csv  stats.csv
include/: cholesky.hpp  convergence.hpp  gbm.hpp  rng.hpp  sde_integrator.hpp  statistics.hpp  time_grid.hpp
include/.cph/: .ex.cpp_923a0fc9b2b73a01fe87477679ae0370.prob
include/bs/: black_scholes.hpp  normal.hpp  payoff.hpp
include/hedging/: delta_hedger.hpp  hedging_runner.hpp  pnl_attribution.hpp  report_generator.hpp
scripts/: plot_convergence.py  plot_hedging.py  plot_paths.py  plot_stats.py
src/: cholesky.cpp  convergence_runner.cpp  rng.cpp  statistics.cpp  time_grid.cpp
src/bs/: black_scholes.cpp  normal.cpp  payoff.cpp
src/hedging/: delta_hedger.cpp  report_generator.cpp
tests/: test_black_scholes.cpp  test_cholesky.cpp  test_cholesky_bin  test_hedging.cpp  test_integrator  test_integrator.cpp  test_integrator_bin  test_statistics.cpp
